Slug instead of Id details implementation
